# mcp-client-cli

./: CLAUDE.md  README.md  pyproject.toml
src/mcp_client_cli/: agent.py  cli.py  llm.py  memory.py  output.py  simple_storage.py  tool.py
