[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp_client_cli"
version = "1.0.4"
description = "Command line interface for MCP client"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Adhika Setya Pramudita", email = "adhika.setya.p@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
    "mcp>=1.6.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "google-generativeai>=0.8.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.1",
    "aiosqlite>=0.20.0",
    "rich>=13.9.0",
    "commentjson>=0.9.0",
    "jsonschema>=4.0.0",
    "pydantic>=2.0.0",
    "pywin32>=306; sys_platform == 'win32' or platform_system == 'Windows'",
    "standard-imghdr>=3.13.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
clipboard = [
    "pyperclip>=1.8.2",
    "pngpaste; sys_platform == 'darwin' and python_version < '3.12'"
]

[project.urls]
Homepage = "https://github.com/adhikasp/mcp_client_cli"
Issues = "https://github.com/adhikasp/mcp_client_cli/issues"

[project.scripts]
llm = "mcp_client_cli.cli:main"
